--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: 2.2.0
   flutter_staggered_grid_view: ^0.6.2
   flutter_svg: ^1.1.6
+  custom_navigation_bar: ^0.8.2
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +62,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - assets/
+    - assets/images/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
